--- a/src/betal.html
+++ b/src/betal.html
@@ -322,7 +322,7 @@
       <section class="">
         <!-- progress bar -->
         <article
-          class="grid place-content-center pb-l-spacing-mobile lg:pb-xl-spacing-desktop"
+          class="grid place-content-center pb-l-spacing-mobile lg:pb-m-spacing-desktop"
         >
           <div class="full_bar">
             <div>
@@ -367,7 +367,7 @@
         <article class="pb-l-spacing-mobile">
           <div>
             <h1
-              class="text-center font-main-heading text-h1-mobile lg:py-xl-spacing-desktop lg:text-h1-desktop"
+              class="text-center font-main-heading text-h1-mobile lg:text-h1-desktop"
             >
               Betalingsmetode
             </h1>
@@ -376,7 +376,9 @@
       </section>
 
       <!-- sektion 2 -->
-      <section class="grid gap-xl-spacing-mobile">
+      <section
+        class="grid gap-xl-spacing-mobile lg:grid-cols-2 lg:gap-xxxl-spacing-desktop"
+      >
         <!-- ordreoversigt -->
         <article>
           <!-- overskrift -->
