--- a/src/betal_kreditkort.html
+++ b/src/betal_kreditkort.html
@@ -301,7 +301,7 @@
       <section class="">
         <!-- progress bar -->
         <article
-          class="grid place-content-center pb-l-spacing-mobile lg:pb-xl-spacing-desktop"
+          class="grid place-content-center pb-l-spacing-mobile lg:pb-m-spacing-desktop"
         >
           <div class="full_bar">
             <div>
@@ -346,7 +346,7 @@
         <article class="pb-l-spacing-mobile">
           <div>
             <h1
-              class="text-center font-main-heading text-h1-mobile lg:py-xl-spacing-desktop lg:text-h1-desktop"
+              class="text-center font-main-heading text-h1-mobile lg:text-h1-desktop"
             >
               Udfyld kortoplysninger
             </h1>
