--- a/src/information.html
+++ b/src/information.html
@@ -300,7 +300,7 @@
       <section class="">
         <!-- progress bar -->
         <article
-          class="grid place-content-center pb-l-spacing-mobile lg:pb-xl-spacing-desktop"
+          class="grid place-content-center pb-l-spacing-mobile lg:pb-m-spacing-desktop"
         >
           <div class="full_bar">
             <div>
@@ -492,19 +492,12 @@
             class="grid gap-xxs-spacing-mobile pt-m-spacing-mobile lg:flex lg:justify-end lg:gap-m-spacing-desktop"
           >
             <!-- tilbage -->
-            <div class="grid justify-end">
-              <a
-                tabindex="0"
-                class="mx-auto grid justify-center rounded-radius-mobile border-2 border-rust-500 bg-regnorm-100 py-xxs-spacing-mobile px-[30px] font-button-text text-button-mobile text-rust-800 drop-shadow-buttonshadow hover:bg-rust-200 lg:w-full lg:py-[15px]"
-                href="information.html"
-                >Tilbage</a
-              >
-            </div>
+
             <!-- videre -->
-            <div class="grid justify-end">
+            <div class="grid justify-end pt-m-spacing-mobile">
               <a
                 tabindex="0"
-                class="py-xxs-py-xxs-spacing-mobile mx-auto grid justify-center rounded-radius-mobile border-0 bg-color-primary-button-background px-[50px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-[15px]"
+                class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-l-spacing-mobile font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
                 href="betal.html"
                 >Videre</a
               >
