--- a/src/kurv.html
+++ b/src/kurv.html
@@ -292,7 +292,7 @@
       <section class="">
         <!-- progress bar -->
         <article
-          class="grid place-content-center pb-l-spacing-mobile lg:pb-xl-spacing-desktop"
+          class="grid place-content-center pb-l-spacing-mobile lg:pb-m-spacing-desktop"
         >
           <div class="full_bar">
             <div>
@@ -335,7 +335,7 @@
         </article>
 
         <!-- overskrift -->
-        <article class="pb-xl-spacing-mobile">
+        <article class="pb-l-spacing-mobile">
           <h1
             class="text-center font-main-heading text-h1-mobile lg:text-h1-desktop"
           >
@@ -449,7 +449,7 @@
           <div class="grid justify-end pt-m-spacing-mobile lg:pt-[70px]">
             <a
               tabindex="0"
-              class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
+              class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-l-spacing-mobile font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
               href="information.html"
               >Fortsæt til betaling</a
             >
