--- a/src/logind.html
+++ b/src/logind.html
@@ -336,10 +336,11 @@
               href="#"
               >Har du glemt dit kodeord?</a
             >
-            <div class="knap flex justify-center">
+            <div class="grid justify-center py-xl-spacing-mobile lg:pt-[70px]">
               <a
-                class="flex max-w-[100%] flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
-                href=""
+                tabindex="0"
+                class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
+                href="blomster.html"
                 >Log ind</a
               >
             </div>
