--- a/src/betal_bekraeft.html
+++ b/src/betal_bekraeft.html
@@ -440,261 +440,12 @@
             <a
               tabindex="0"
               class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-l-spacing-mobile font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
-              href="information.html"
+              href="index.html"
               >Tilbage til forsiden</a
             >
           </div>
         </article>
       </section>
-
-      <!-- <section>
-        <article>
-          <h1
-            class="py-xl-spacing-mobile text-center font-main-heading text-h1-mobile lg:py-xl-spacing-desktop lg:text-h2-desktop"
-          >
-            Bekræftelse
-          </h1>
-        </article>
-        <article
-          class="grid place-content-center pb-xxl-spacing-mobile lg:pb-xl-spacing-desktop"
-        >
-          <div class="full_bar">
-            <div>
-              <p class="overskrift -ml-2 lg:-ml-3">Kurv</p>
-              <div class="bar1">
-                <div class="ball1">
-                  <a href="kurv.html"><p class="tal">1</p></a>
-                </div>
-                <div class="line1"></div>
-              </div>
-            </div>
-
-            <div>
-              <p class="overskrift -ml-1.5 lg:-ml-2">Info</p>
-              <div class="bar2">
-                <div class="ball2">
-                  <a href="information.html"><p class="tal">2</p></a>
-                </div>
-                <div class="line2"></div>
-              </div>
-            </div>
-            <div>
-              <p class="overskrift -ml-2 lg:-ml-5">Betal</p>
-              <div class="bar3">
-                <div class="ball3">
-                  <a href="betal.html"><p class="tal">3</p></a>
-                </div>
-                <div class="line3"></div>
-              </div>
-            </div>
-            <div>
-              <p class="overskrift -ml-4 lg:-ml-9">Bekræft</p>
-              <div class="bar4">
-                <div class="ball4">
-                  <a href="betal_bekraeft.html"><p class="tal">4</p></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
-      </section>
-      <div class="py-s-spacing-mobile lg:flex">
-        <a
-          class="font-font-body text-abonnement-text-spand underline opacity-50 hover:opacity-100 lg:text-body-mobile"
-          href="betal_kreditkort.html"
-          >Tilbage</a
-        >
-      </div>
-
-      <div class="lg:grid lg:grid-cols-2 lg:gap-10">
-        <section class="pb-xl-spacing-mobile">
-          <article>
-            <div>
-              <h2
-                class="pb-m-spacing-mobile font-other-headings text-h2-mobile font-semibold lg:pb-l-spacing-desktop lg:text-h2-desktop"
-              >
-                Ordreoversigt
-              </h2>
-            </div>
-            <div class="rounded-radius-mobile border-2 border-color-headings">
-              <div class="flex lg:gap-10">
-                <figure class="my-auto w-1/2 pt-xs-spacing-mobile lg:w-full">
-                  <img
-                    src="img/abonnement_filler.webp"
-                    alt="blomster i en spand"
-                  />
-                </figure>
-                <div class="lg:w-[600px]">
-                  <div class="pt-l-spacing-mobile lg:pt-l-spacing-desktop">
-                    <p
-                      class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
-                    >
-                      Lille
-                    </p>
-                  </div>
-                  <div class="pt-m-spacing-mobile lg:pt-xl-spacing-desktop">
-                    <p
-                      class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
-                    >
-                      Neutral og tæt
-                    </p>
-                  </div>
-                  <div class="pt-m-spacing-mobile lg:pt-xl-spacing-desktop">
-                    <p
-                      class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
-                    >
-                      Sensitiv (nej)
-                    </p>
-                  </div>
-                  <div class="pt-m-spacing-mobile lg:pt-xl-spacing-desktop">
-                    <p
-                      class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
-                    >
-                      Levering hver anden uge
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div
-                class="flex place-content-center py-l-spacing-mobile font-medium lg:py-m-spacing-desktop"
-              >
-                <h3
-                  class="font-other-headings text-h4-mobile lg:text-h4-desktop"
-                >
-                  Subtotal 620 kr
-                </h3>
-              </div>
-            </div>
-          </article>
-        </section>
-        <section>
-          <article class="pb-xl-spacing-mobile">
-            <div>
-              <h2
-                class="pb-m-spacing-mobile font-other-headings text-h2-mobile font-semibold lg:pb-l-spacing-desktop lg:text-h2-desktop"
-              >
-                Information
-              </h2>
-            </div>
-            <div class="border-color-heading rounded-radius-mobile border-2">
-              <div
-                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:pt-l-spacing-desktop"
-              >
-                <h3
-                  class="font-other-headings text-h4-mobile lg:text-h4-desktop"
-                >
-                  Navn
-                </h3>
-                <p
-                  class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
-                >
-                  Sofie Larsen
-                </p>
-              </div>
-              <div
-                class="flex justify-between px-s-spacing-mobile pb-m-spacing-mobile lg:px-s-spacing-desktop lg:py-xl-spacing-desktop"
-              >
-                <h3
-                  class="font-other-headings text-h4-mobile lg:text-h4-desktop"
-                >
-                  Levering
-                </h3>
-                <p
-                  class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
-                >
-                  Strandvejen 167
-                  <br />
-                  2900 Hellerup
-                </p>
-              </div>
-              <div
-                class="flex justify-between px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
-              >
-                <h3
-                  class="font-other-headings text-h4-mobile lg:text-h4-desktop"
-                >
-                  E-mail
-                </h3>
-                <p
-                  class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
-                >
-                  sofie@gmail.com
-                </p>
-              </div>
-              <div
-                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
-              >
-                <h3
-                  class="font-other-headings text-h4-mobile lg:text-h4-desktop"
-                >
-                  Telefonnummer
-                </h3>
-                <p
-                  class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
-                >
-                  +45 12345678
-                </p>
-              </div>
-
-              <div
-                class="flex place-content-center pb-l-spacing-mobile font-medium lg:py-m-spacing-desktop"
-              >
-                <h4
-                  class="font-font-body text-body-mobile lg:text-body-desktop"
-                >
-                  Jeg ønsker en SMS, pr levering
-                </h4>
-              </div>
-            </div>
-          </article>
-        </section>
-      </div>
-      <div class="lg:grid lg:grid-cols-2">
-        <section>
-          <article class="pb-xl-spacing-mobile">
-            <div>
-              <h2
-                class="pb-l-spacing-mobile font-other-headings text-h2-mobile font-semibold lg:pb-l-spacing-desktop lg:text-h2-desktop"
-              >
-                Betalingsmetode
-              </h2>
-            </div>
-            <div
-              class="flex h-[70px] w-full place-content-center gap-10 border-2 border-color-black lg:h-[100px] lg:w-[490px]"
-            >
-              <img
-                class="my-auto h-10 w-10"
-                src="img/ikoner/kreditkort_ikon.svg"
-                alt="betalingskort ikon"
-              />
-              <h3
-                class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
-              >
-                Kreditkort
-              </h3>
-            </div>
-          </article>
-        </section>
-        <section>
-          <article>
-            <div class="py-xl-spacing-mobile lg:py-xl-spacing-desktop">
-              <h3
-                class="text-center font-font-body text-body-mobile lg:text-body-desktop"
-              >
-                En bekræftelse vil blive sendt til dig på din mail
-              </h3>
-              <div class="pt-xl-spacing-mobile">
-                <a
-                  tabindex="0"
-                  class="mx-auto flex w-1/2 flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-1/3 lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
-                  href="tak.html"
-                  >Bekræft</a
-                >
-              </div>
-            </div>
-          </article>
-        </section>
-      </div> -->
     </main>
     <footer
       tabindex="0"
