hero på undersider

--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -338,10 +338,10 @@
     <!---------------------------------------------- HERO -->
     <main class="baggrundsbillede">
       <section
-        class="bg-hero_image bg-cover pt-l-spacing-mobile text-center lg:h-hero-height"
+        class="bg-hero_image bg-cover px-[30px] pt-l-spacing-mobile text-center lg:h-hero-height lg:px-xxxl-spacing-desktop lg:py-l-spacing-mobile lg:pb-m-spacing-desktop"
       >
         <article
-          class="mx-10 border-2 border-sol pt-m-spacing-mobile pl-10 pr-10 text-sol lg:grid lg:h-hero-border-height lg:place-content-center"
+          class="mx-auto border-2 border-sol-300 pt-m-spacing-mobile text-sol-300 lg:h-hero-border-height lg:pt-xxl-spacing-mobile"
         >
           <h1 class="font-main-heading text-h1-mobile lg:text-h1-desktop">
             Abonnement
@@ -358,7 +358,7 @@
             af årstidens blomster leveret direkte til din hoveddør.
           </p>
         </article>
-        <div class="py-s-spacing-mobile">
+        <div class="mt-l-spacing-desktop pb-xs-spacing-mobile">
           <svg
             class="mx-auto grid text-sol"
             width="32"
