--- a/src/blomster.html
+++ b/src/blomster.html
@@ -268,7 +268,7 @@
     </header>
     <!---------------------------------------------- HERO -->
     <section
-      class="bg-hero_image bg-cover pt-l-spacing-mobile text-center lg:h-hero-height"
+      class="bg-hero_image bg-cover pt-l-spacing-mobile text-center lg:h-hero-height lg:px-xxl-spacing-desktop lg:py-l-spacing-mobile lg:pb-m-spacing-desktop"
     >
       <div
         class="mx-10 border-2 border-himmel-500 pt-m-spacing-mobile pl-10 pr-10 text-himmel-500 lg:h-hero-border-height"
@@ -291,7 +291,7 @@
           Vi glæder os til at se dig!
         </p>
       </div>
-      <div class="py-s-spacing-mobile">
+      <div class="mt-l-spacing-desktop pb-xs-spacing-mobile">
         <svg
           class="mx-auto grid text-himmel-500"
           width="32"
