--- a/src/index.html
+++ b/src/index.html
@@ -457,7 +457,7 @@
     <!--------------------------------------------------------------------------------------------- HERO -->
     <section class="baggrundsbillede">
       <div
-        class="lg:py-l-spacing-mobile lg:px-xxl-spacing-desktop lg:pb-m-spacing-desktop"
+        class="lg:h-hero-height lg:py-l-spacing-mobile lg:px-xxl-spacing-desktop lg:pb-m-spacing-desktop"
       >
         <div class="lg:grid lg:grid-cols-2 lg:border-2 lg:border-sol-300">
           <figure
