--- a/src/vaser.html
+++ b/src/vaser.html
@@ -277,7 +277,7 @@
 
     <!---------------------------------------------- HERO -->
     <section
-      class="bg-hero_image bg-cover pt-l-spacing-mobile text-center lg:h-hero-height"
+      class="bg-hero_image bg-cover pt-l-spacing-mobile text-center lg:h-hero-height lg:px-xxl-spacing-desktop lg:py-l-spacing-mobile lg:pb-m-spacing-desktop"
     >
       <div
         class="mx-10 border-2 border-graes-300 pt-m-spacing-mobile pl-10 pr-10 text-graes-300 lg:h-hero-border-height"
@@ -301,7 +301,7 @@
           Vi glæder os til at se dig!
         </p>
       </div>
-      <div class="py-s-spacing-mobile">
+      <div class="mt-l-spacing-desktop pb-xs-spacing-mobile">
         <svg
           class="mx-auto grid text-graes-300"
           width="32"
