--- a/src/blomster.html
+++ b/src/blomster.html
@@ -823,7 +823,7 @@
                 Eucalyptus
               </h3>
               <div
-                class="flex flex-col gap-s-spacing-mobile py-l-spacing-mobile pl-xs-spacing-mobile"
+                class="flex flex-col gap-s-spacing-mobile py-l-spacing-mobile px-xs-spacing-mobile"
               >
                 <div class="flex gap-xs-spacing-mobile">
                   <img
