--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -460,7 +460,7 @@
               </div>
             </div>
             <div class="progress">
-              <div class="step1 bg-rust-500"></div>
+              <div class="step1"></div>
               <div class="step2 bg-rust-500"></div>
               <div class="step3"></div>
               <div class="step4"></div>
@@ -486,8 +486,8 @@
               </div>
             </div>
             <div class="progress">
-              <div class="step1 bg-rust-500"></div>
-              <div class="step2 bg-rust-500"></div>
+              <div class="step1"></div>
+              <div class="step2"></div>
               <div class="step3 bg-rust-500"></div>
               <div class="step4"></div>
             </div>
@@ -512,9 +512,9 @@
               </div>
             </div>
             <div class="progress">
-              <div class="step1 bg-rust-500"></div>
-              <div class="step2 bg-rust-500"></div>
-              <div class="step3 bg-rust-500"></div>
+              <div class="step1"></div>
+              <div class="step2"></div>
+              <div class="step3"></div>
               <div class="step4 bg-rust-500"></div>
             </div>
           </div>
