--- a/src/index.html
+++ b/src/index.html
@@ -533,7 +533,7 @@
     <main class="overflow-x-clip">
       <!-- Cookieboks start-->
       <article
-        class="z-1 fixed bottom-0 right-0 h-[55%] w-[100%] rounded-t-cookie bg-background-color p-8 font-font-body lg:right-52 lg:h-[38%] lg:w-[70%]"
+        class="z-1 fixed bottom-0 right-0 z-10 h-[55%] w-[100%] rounded-t-cookie bg-background-color p-8 font-font-body lg:right-52 lg:h-[38%] lg:w-[70%]"
         id="cookieboks"
       >
         <div class="grid place-content-center pb-xxxs-spacing-mobile lg:hidden">
