--- a/src/index.html
+++ b/src/index.html
@@ -533,13 +533,13 @@
     <main class="overflow-x-clip">
       <!-- Cookieboks start-->
       <article
-        class="z-1 fixed bottom-0 right-0 z-10 h-[55%] w-[100%] rounded-t-cookie bg-background-color p-8 font-font-body lg:right-52 lg:h-[38%] lg:w-[70%]"
+        class="fixed bottom-0 right-0 z-10 h-[100%] w-[100%] rounded-t-cookie bg-background-color font-font-body lg:right-52 lg:h-[38%] lg:w-[70%]"
         id="cookieboks"
       >
         <div class="grid place-content-center pb-xxxs-spacing-mobile lg:hidden">
           <img class="" src="img/ikoner/cookie_ikon.svg" alt="" />
         </div>
-        <div class="">
+        <div class="px-3">
           <h3
             class="text-center text-h5-mobile font-bold lg:pb-xs-spacing-desktop lg:text-h5-desktop"
           >
@@ -562,7 +562,7 @@
         </div>
 
         <div
-          class="grid gap-s-spacing-mobile pt-xs-spacing-mobile lg:flex lg:justify-end lg:gap-xxl-spacing-mobile"
+          class="grid gap-s-spacing-mobile p-8 pt-xs-spacing-mobile lg:flex lg:justify-end lg:gap-xxl-spacing-mobile"
         >
           <div class="knap grid justify-center">
             <button
