--- a/src/betal_kreditkort.html
+++ b/src/betal_kreditkort.html
@@ -476,13 +476,21 @@
           </div>
           <!-- knapper -->
           <div
-            class="grid gap-xxs-spacing-mobile pt-m-spacing-mobile lg:flex lg:justify-end lg:gap-m-spacing-desktop"
+            class="flex justify-between gap-s-spacing-mobile pt-m-spacing-mobile lg:justify-end lg:gap-xl-spacing-desktop lg:pt-l-spacing-mobile"
           >
+            <!-- tilbage -->
+            <div class="grid items-center justify-end pt-xs-spacing-mobile">
+              <a
+                class="font-font-body text-abonnement-text-info underline lg:text-body-mobile"
+                href="betal.html"
+                >Tilbage</a
+              >
+            </div>
             <!-- videre -->
-            <div class="grid justify-end">
+            <div class="grid justify-end pt-xxxs-spacing-mobile">
               <a
                 tabindex="0"
-                class="mx-auto grid justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-[10px] px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-[15px]"
+                class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-l-spacing-mobile font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
                 href="betal_bekraeft.html"
                 >Bekræft køb</a
               >
