--- a/src/abonnement4.html
+++ b/src/abonnement4.html
@@ -392,9 +392,9 @@
       <section class="grid justify-center py-l-spacing-mobile">
         <a
           tabindex="0"
-          class="mx-auto grid w-full justify-center rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-[30px] font-button-text text-button-mobile text-rust-800 drop-shadow-buttonshadow hover:bg-rust-200 lg:w-full lg:py-xs-spacing-mobile"
+          class="mx-auto grid w-full justify-center rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-[30px] py-[10px] font-button-text text-button-mobile text-rust-800 drop-shadow-buttonshadow hover:bg-rust-200 lg:w-full lg:py-xs-spacing-mobile"
           href="kurv.html"
-          >Næste trin</a
+          >Gå til betaling</a
         >
       </section>
     </main>
