--- a/src/betal.html
+++ b/src/betal.html
@@ -431,29 +431,26 @@
             </p>
           </div>
           <!-- metoder -->
-          <div class="flex flex-col gap-[27px] lg:gap-[44px]">
-            <a href="betal_kreditkort.html">
-              <div
-                class="grid h-[50px] w-[330px] border-2 border-color-black hover:scale-105 lg:h-[100px] lg:w-[490px]"
-              >
-                <h4
-                  class="m-auto font-font-body text-body-mobile lg:text-body-desktop"
-                >
-                  MobilePay
-                </h4>
-              </div></a
+          <div class="flex flex-col gap-[20px] lg:mt-m-spacing-desktop">
+            <div
+              class="w-[330px card grid h-[50px] justify-center border-2 border-color-black hover:scale-110 lg:h-[100px] lg:w-[490px]"
             >
-            <a class="" href="betal_kreditkort.html">
-              <div
-                class="flex h-[50px] w-[330px] place-content-center gap-10 border-2 border-color-black hover:scale-105 lg:h-[100px] lg:w-[490px]"
+              <h4
+                class="m-auto font-font-body text-body-mobile lg:text-body-desktop"
               >
-                <h4
-                  class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
-                >
-                  VISA / Mastercard
-                </h4>
-              </div></a
+                MobilePay
+              </h4>
+            </div>
+
+            <div
+              class="card grid h-[50px] w-[330px] justify-center border-2 border-color-black hover:scale-110 lg:h-[100px] lg:w-[490px]"
             >
+              <h4
+                class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
+              >
+                VISA / Mastercard
+              </h4>
+            </div>
           </div>
 
           <!-- knapper -->
