--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -151,7 +151,7 @@
       }
     </style>
   </head>
-  <body class="">
+  <body>
     <!-- header -->
     <header>
       <div
@@ -376,7 +376,7 @@
       <!--------------------------------------------------------------------- LOG IND -->
       <section
         id="loginbox"
-        class="placering_box gemt fixed top-0 left-[25%] max-h-screen max-w-[600px] border-2 border-color-black bg-background-color pb-xl-spacing-mobile text-center font-font-body"
+        class="placering_box gemt fixed top-2 left-0 mx-10 max-h-screen max-w-[600px] border-2 border-color-black bg-background-color pb-xl-spacing-mobile text-center font-font-body lg:left-[25%]"
       >
         <div class="login_opret grid grid-cols-2 items-center">
           <div class="logind flex items-center px-[30px]">
@@ -399,14 +399,14 @@
           </div>
         </div>
 
-        <div class="content px-[30px] pt-l-spacing-mobile font-font-body">
-          <h3
+        <div class="content px-[30px] pt-m-spacing-mobile font-font-body">
+          <h2
             class="overskrift1 pb-m-spacing-mobile font-other-headings text-h3-mobile lg:text-h3-desktop"
           >
             Log ind
-          </h3>
+          </h2>
 
-          <p class="text pb-l-spacing-mobile">
+          <p class="pb-xs-spacing-mobile font-font-body text-body-mobile">
             Har du bruger hos os, og vil gerne give feedback eller købe vores
             abonnement? Log venligst ind ved hjælp af formularen nedenfor. Har
             du ikke en bruger, skal du først
@@ -770,6 +770,7 @@
         </section>
       </article>
     </footer>
+
     <script type="module" src="main.js"></script>
   </body>
 </html>
