--- a/src/blomster.html
+++ b/src/blomster.html
@@ -41,7 +41,7 @@
         max-width: 100%;
         max-height: 100%;
       }
-      img {
+      .article_wrapper img {
         height: 100%;
         width: 100%;
       }
@@ -237,13 +237,13 @@
 
         <ul class="secondary_nav">
           <li>
-            <a tabindex="0" href="logind.html">
+            <button id="konto" tabindex="0">
               <img
                 class="person h-8 w-8"
                 src="img/ikoner/person.svg"
                 alt="Gå til din konto"
               />
-            </a>
+            </button>
           </li>
           <li>
             <a tabindex="0" href="kurv.html">
