--- a/src/sitemap.html
+++ b/src/sitemap.html
@@ -439,56 +439,94 @@
     </main>
     <!-- footer -->
     <footer
+      itemscope
+      itemtype="https://schema.org/LocalBusiness"
       tabindex="0"
       class="font-font-body text-body-mobile text-background-color lg:text-body-desktop"
     >
       <article
         class="bg-footer-background1 pt-xl-spacing-mobile text-center lg:pt-xl-spacing-desktop"
       >
+        <!-- primær indhold -->
         <div class="desktop lg:grid lg:grid-cols-3 lg:pb-xxl-spacing-desktop">
+          <!-- butikker -->
           <section
             class="butikker grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
-            <h4 tabindex="0" class="text-h4-mobile lg:text-h4-desktop">
+            <h2 tabindex="0" class="text-h4-mobile lg:text-h4-desktop">
               BUTIKKER
-            </h4>
+            </h2>
 
             <div class="adresser mx-auto grid gap-l-spacing-mobile text-left">
-              <div tabindex="0" class="strandvejen">
-                <p>Strandvejen 167</p>
-                <p>2900 Hellerup</p>
-                <p>Danmark</p>
+              <address
+                itemprop="address"
+                itemscope
+                itemtype="https://schema.org/PostalAddress"
+                tabindex="0"
+                class="strandvejen"
+              >
+                <p itemprop="streetAddress">Strandvejen 167</p>
                 <p>
-                  <a href="tel:+4539629059"></a>
-                  Tlf.: +45 39 62 90 59
+                  <span itemprop="postalCode">2900</span
+                  ><span itemprop="addressLocality"> Hellerup</span>
                 </p>
-              </div>
+                <p><span itemprop="addressLocality">Danmark</span></p>
+                <p>
+                  <a href="tel:+4539629059"></a> Tlf.:
+                  <span itemprop="telephone">+45 39 62 90 59</span>
+                </p>
+              </address>
 
-              <div tabindex="0" class="gunnar">
-                <p>Gunnar Nu Hansens Pl. 6</p>
-                <p>2100 København Ø</p>
-                <p>Danmark</p>
-                <p><a href="tel:+4536260700"></a>Tlf.: +45 36 26 07 00</p>
-              </div>
+              <address
+                itemprop="address"
+                itemscope
+                itemtype="https://schema.org/PostalAddress"
+                tabindex="0"
+                class="gunnar"
+              >
+                <p itemprop="streetAddress">Gunnar Nu Hansens Pl. 6</p>
+                <p>
+                  <span itemprop="postalCode">2100</span
+                  ><span itemprop="addressLocality"> København Ø</span>
+                </p>
+                <p><span itemprop="addressLocality">Danmark</span></p>
+                <p>
+                  <a href="tel:+4536260700"></a>
+                  Tlf.: <span itemprop="telephone">+45 36 26 07 00</span>
+                </p>
+              </address>
 
-              <div tabindex="0" class="vaernedamsvej">
-                <p>Værnedamsvej 4A st.</p>
-                <p>1619 København V</p>
-                <p>Danmark</p>
-                <p><a href="tel:+4526117006"></a>Tlf.: +45 26 11 70 06</p>
-              </div>
+              <address
+                itemprop="address"
+                itemscope
+                itemtype="https://schema.org/PostalAddress"
+                tabindex="0"
+                class="vaernedamsvej"
+              >
+                <p itemprop="streetAddress">Værnedamsvej 4A st.</p>
+                <p>
+                  <span itemprop="postalCode">1619</span
+                  ><span itemprop="addressLocality"> København V</span>
+                </p>
+                <p><span itemprop="addressLocality">Danmark</span></p>
+                <p>
+                  <a href="tel:+4526117006"></a>Tlf.:
+                  <span itemprop="telephone">+45 26 11 70 06</span>
+                </p>
+              </address>
             </div>
           </section>
 
+          <!-- information links -->
           <section
             class="informationer flex flex-col gap-l-spacing-mobile pb-xxl-spacing-mobile lg:gap-0 lg:pb-0"
           >
-            <h4
+            <h2
               tabindex="0"
               class="text-h4-mobile lg:pb-l-spacing-desktop lg:text-h4-desktop"
             >
               INFORMATIONER
-            </h4>
+            </h2>
             <div class="mx-auto">
               <div class="text-start underline lg:pb-l-spacing-desktop">
                 <a tabindex="0" href="#">Om os</a>
@@ -502,12 +540,19 @@
             </div>
           </section>
 
+          <!-- åbningstider -->
           <section
             class="abningstider grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
-            <h4 tabindex="0" class="text-h4-mobile lg:text-h4-desktop">
+            <h2 tabindex="0" class="text-h4-mobile lg:text-h4-desktop">
               ÅBNINGSTIDER
-            </h4>
+              <meta
+                itemprop="openingHours"
+                content="Mo,Tu,We,Th,Fr 10:00-18:00"
+              />
+              <meta itemprop="openingHours" content="Sa 10:00-15:00" />
+              <meta itemprop="openingHours" content="Su 11:00-16:00" />
+            </h2>
             <div class="tider grid grid-cols-2">
               <div
                 class="dage grid gap-l-spacing-mobile lg:grid lg:gap-m-spacing-desktop"
@@ -534,17 +579,24 @@
             </div>
           </section>
 
+          <!-- følg os her links -->
           <section
             class="folgosher pb-xxl-spacing-mobile lg:col-start-2 lg:pb-0 lg:pt-xxl-spacing-desktop"
           >
-            <h4
+            <h2
               tabindex="0"
               class="pb-l-spacing-mobile text-h4-mobile lg:text-h4-desktop"
             >
               FØLG OS HER
-            </h4>
+            </h2>
             <div class="ikoner flex place-content-center gap-m-spacing-mobile">
-              <svg tabindex="0" width="40" height="40" viewBox="0 0 48 48">
+              <svg
+                tabindex="0"
+                width="40"
+                height="40"
+                viewBox="0 0 48 48"
+                alt="facebook"
+              >
                 <g fill="none" fill-rule="evenodd" clip-rule="evenodd">
                   <path
                     stroke="#fffdf9"
@@ -559,7 +611,13 @@
                   ></path>
                 </g>
               </svg>
-              <svg tabindex="0" width="44" height="44" viewBox="0 0 512 512">
+              <svg
+                tabindex="0"
+                width="44"
+                height="44"
+                viewBox="0 0 512 512"
+                alt="instagram"
+              >
                 <path
                   fill="#fffdf9"
                   d="M349.33 69.33a93.62 93.62 0 0 1 93.34 93.34v186.66a93.62 93.62 0 0 1-93.34 93.34H162.67a93.62 93.62 0 0 1-93.34-93.34V162.67a93.62 93.62 0 0 1 93.34-93.34h186.66m0-37.33H162.67C90.8 32 32 90.8 32 162.67v186.66C32 421.2 90.8 480 162.67 480h186.66C421.2 480 480 421.2 480 349.33V162.67C480 90.8 421.2 32 349.33 32Z"
@@ -573,6 +631,7 @@
           </section>
         </div>
 
+        <!-- sekundær indhold  -->
         <section
           class="nederst grid gap-l-spacing-mobile bg-footer-background2 pb-xl-spacing-mobile pt-l-spacing-mobile lg:flex lg:place-content-center lg:gap-20"
         >
